--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,12 @@
   <!-- Using Google Font -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;700&display=swap" rel="stylesheet">
 
   <!-- Using Local Font -->
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/index.css" />
 
-  <title>Minimal UI Kit</title>
+  <title>Gym4u - Gym For You</title>
   <meta name="description"
     content="The starting point for your next project with Minimal UI Kit, built on the newest version of Material-UI ©, ready to be customized to your style" />
   <meta name="keywords" content="react,material,kit,application,dashboard,admin,template" />
